--- a/src/main/resources/addmailpage.fxml
+++ b/src/main/resources/addmailpage.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
@@ -8,45 +10,93 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="condo.controller.staff.AddMailController">
+<AnchorPane maxWidth="800.0" prefHeight="600.0" prefWidth="800.0" styleClass="background1" stylesheets="@pictures/CSS/bg.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="condo.controller.staff.AddMailController">
     <children>
-        <Label layoutX="50.0" layoutY="-2.0" prefHeight="610.0" prefWidth="700.0" />
-      <Label layoutX="465.0" layoutY="100.0" prefHeight="200.0" prefWidth="250.0" style="-fx-border-color: black;" />
-      <Label layoutX="465.0" layoutY="300.0" prefHeight="200.0" prefWidth="250.0" style="-fx-border-color: black;" />
+        <Label layoutX="50.0" layoutY="-2.0" opacity="0.85" prefHeight="610.0" prefWidth="700.0" style="-fx-background-color: white;" />
+      <Label layoutX="465.0" layoutY="100.0" opacity="0.65" prefHeight="200.0" prefWidth="250.0" style="-fx-background-color: black;" />
+      <Label layoutX="465.0" layoutY="300.0" opacity="0.65" prefHeight="200.0" prefWidth="250.0" style="-fx-background-color: black;" />
         <Label alignment="CENTER" contentDisplay="CENTER" layoutX="185.0" layoutY="14.0" prefHeight="50.0" prefWidth="430.0" text="Add Mail ">
             <font>
                 <Font name="Arial Rounded MT Bold" size="50.0" />
             </font>
         </Label>
-      <ChoiceBox fx:id="typeBox" layoutX="225.0" layoutY="103.0" prefHeight="25.0" prefWidth="100.0" />
-      <ChoiceBox fx:id="sizeBox" layoutX="225.0" layoutY="153.0" prefHeight="25.0" prefWidth="100.0" />
-      <TextField fx:id="priorityField" layoutX="221.0" layoutY="203.0" />
-      <TextField fx:id="serviceField" layoutX="221.0" layoutY="253.0" />
-      <TextField fx:id="trackNumField" layoutX="221.0" layoutY="303.0" />
-      <TextField fx:id="senderField" layoutX="514.0" layoutY="180.0" />
-      <TextField fx:id="addressField" layoutX="514.0" layoutY="250.0" />
-      <TextField fx:id="residentField" layoutX="515.0" layoutY="385.0" />
-      <TextField fx:id="roomField" layoutX="515.0" layoutY="455.0" />
-      <Button fx:id="upLoadPhotoBtn" layoutX="171.0" layoutY="544.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="Upload photo">
+      <ChoiceBox fx:id="typeBox" layoutX="225.0" layoutY="103.0" prefHeight="25.0" prefWidth="100.0">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></ChoiceBox>
+      <ChoiceBox fx:id="sizeBox" layoutX="225.0" layoutY="153.0" prefHeight="25.0" prefWidth="100.0">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></ChoiceBox>
+      <TextField fx:id="priorityField" layoutX="221.0" layoutY="203.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></TextField>
+      <TextField fx:id="serviceField" layoutX="221.0" layoutY="253.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></TextField>
+      <TextField fx:id="trackNumField" layoutX="221.0" layoutY="303.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></TextField>
+      <TextField fx:id="senderField" layoutX="514.0" layoutY="180.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></TextField>
+      <TextField fx:id="addressField" layoutX="514.0" layoutY="250.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></TextField>
+      <TextField fx:id="residentField" layoutX="515.0" layoutY="385.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></TextField>
+      <TextField fx:id="roomField" layoutX="515.0" layoutY="455.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></TextField>
+      <Button fx:id="upLoadPhotoBtn" layoutX="171.0" layoutY="544.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" stylesheets="@pictures/CSS/style.css" text="Upload photo">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <styleClass>
+            <String fx:value="btn" />
+            <String fx:value="btn0" />
+         </styleClass>
       </Button>
-      <Button fx:id="addMailBtn" layoutX="375.0" layoutY="529.0" mnemonicParsing="false" onAction="#handleAddMailBtnOnAction" prefHeight="30.0" prefWidth="50.0" text="Add">
-         <font>
-            <Font name="Arial Rounded MT Bold" size="12.0" />
-         </font></Button>
-      <Button fx:id="cancelBtn" layoutX="570.0" layoutY="544.0" mnemonicParsing="false" onAction="#handleCancelBtnOnAction" prefHeight="30.0" prefWidth="65.0" text="Cancel">
+      <Button fx:id="addMailBtn" layoutX="375.0" layoutY="529.0" mnemonicParsing="false" onAction="#handleAddMailBtnOnAction" prefHeight="30.0" prefWidth="50.0" stylesheets="@pictures/CSS/style.css" text="Add">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <styleClass>
+            <String fx:value="btn" />
+            <String fx:value="btn0" />
+         </styleClass></Button>
+      <Button fx:id="cancelBtn" layoutX="570.0" layoutY="544.0" mnemonicParsing="false" onAction="#handleCancelBtnOnAction" prefHeight="30.0" prefWidth="65.0" stylesheets="@pictures/CSS/style.css" text="Cancel">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="12.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <styleClass>
+            <String fx:value="btn" />
+            <String fx:value="btn0" />
+         </styleClass>
       </Button>
-      <Label layoutX="480.0" layoutY="315.0" prefHeight="30.0" prefWidth="90.0" text="To :">
+      <Label layoutX="480.0" layoutY="315.0" prefHeight="30.0" prefWidth="90.0" text="To :" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
          </font>
       </Label>
-      <Label layoutX="480.0" layoutY="145.0" prefHeight="30.0" prefWidth="90.0" text="Sender's name">
+      <Label layoutX="480.0" layoutY="145.0" prefHeight="30.0" prefWidth="90.0" text="Sender's name" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
@@ -56,7 +106,7 @@
             <Font name="Arial Rounded MT Bold" size="15.0" />
          </font>
       </Label>
-      <Label layoutX="480.0" layoutY="350.0" prefHeight="30.0" prefWidth="122.0" text="Receiver's name">
+      <Label layoutX="480.0" layoutY="350.0" prefHeight="30.0" prefWidth="122.0" text="Receiver's name" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
@@ -68,17 +118,17 @@
       </Label>
       <Label alignment="CENTER" layoutX="125.0" layoutY="360.0" prefHeight="150.0" prefWidth="200.0" text="show image" />
       <ImageView fx:id="mailImage" fitHeight="200.0" fitWidth="250.0" layoutX="100.0" layoutY="335.0" pickOnBounds="true" preserveRatio="true" />
-      <Label layoutX="480.0" layoutY="215.0" prefHeight="30.0" prefWidth="90.0" text="Address">
+      <Label layoutX="480.0" layoutY="215.0" prefHeight="30.0" prefWidth="90.0" text="Address" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
       </Label>
-      <Label layoutX="480.0" layoutY="110.0" prefHeight="30.0" prefWidth="90.0" text="From :">
+      <Label layoutX="480.0" layoutY="110.0" prefHeight="30.0" prefWidth="90.0" text="From :" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
          </font>
       </Label>
-      <Label layoutX="480.0" layoutY="420.0" prefHeight="30.0" prefWidth="90.0" text="Room">
+      <Label layoutX="480.0" layoutY="420.0" prefHeight="30.0" prefWidth="90.0" text="Room" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
