--- a/src/main/resources/addresidentwindow.fxml
+++ b/src/main/resources/addresidentwindow.fxml
@@ -1,62 +1,84 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="condo.controller.staff.AddResidentController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="400.0" styleClass="background1" stylesheets="@pictures/CSS/bg.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="condo.controller.staff.AddResidentController">
    <children>
-      <Button fx:id="addBtn" defaultButton="true" layoutX="175.0" layoutY="430.0" mnemonicParsing="false" onAction="#handleAddBtnOnAction" prefHeight="30.0" prefWidth="50.0" text="Add">
+      <Label opacity="0.85" prefHeight="500.0" prefWidth="400.0" style="-fx-background-color: black;" />
+      <Button fx:id="addBtn" defaultButton="true" layoutX="175.0" layoutY="430.0" mnemonicParsing="false" onAction="#handleAddBtnOnAction" prefHeight="30.0" prefWidth="50.0" stylesheets="@pictures/CSS/style.css" text="Add">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <styleClass>
+            <String fx:value="btn" />
+            <String fx:value="btn0" />
+         </styleClass>
       </Button>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="95.0" layoutY="32.0" prefHeight="50.0" prefWidth="210.0" text="Add Resident" textAlignment="CENTER">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="95.0" layoutY="32.0" prefHeight="50.0" prefWidth="210.0" text="Add Resident" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="30.0" />
          </font>
       </Label>
-      <Label layoutX="50.0" layoutY="150.0" text="Type">
+      <Label layoutX="50.0" layoutY="150.0" text="Type" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
          </font>
       </Label>
-      <Label layoutX="50.0" layoutY="350.0" text="Resident 3">
+      <Label layoutX="50.0" layoutY="350.0" text="Resident 3" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
          </font>
       </Label>
-      <Label layoutX="50.0" layoutY="200.0" text="Owner">
+      <Label layoutX="50.0" layoutY="200.0" text="Owner" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
          </font>
       </Label>
-      <Label layoutX="50.0" layoutY="250.0" text="Resident 1">
+      <Label layoutX="50.0" layoutY="250.0" text="Resident 1" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
          </font>
       </Label>
-      <Label layoutX="50.0" layoutY="300.0" text="Resident 2">
+      <Label layoutX="50.0" layoutY="300.0" text="Resident 2" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
          </font>
       </Label>
-      <Label fx:id="typeLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="200.0" layoutY="151.0" prefHeight="30.0" prefWidth="150.0" textAlignment="CENTER">
+      <Label fx:id="typeLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="200.0" layoutY="151.0" prefHeight="30.0" prefWidth="150.0" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
          </font></Label>
-      <TextField fx:id="ownerField" layoutX="201.0" layoutY="201.0" />
-      <TextField fx:id="resident1Field" layoutX="201.0" layoutY="251.0" />
-      <TextField fx:id="resident2Field" layoutX="201.0" layoutY="301.0" />
-      <TextField fx:id="resident3Field" layoutX="201.0" layoutY="351.0" />
-      <Label layoutX="50.0" layoutY="100.0" text="Room">
+      <TextField fx:id="ownerField" layoutX="201.0" layoutY="201.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></TextField>
+      <TextField fx:id="resident1Field" layoutX="201.0" layoutY="251.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></TextField>
+      <TextField fx:id="resident2Field" layoutX="201.0" layoutY="301.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></TextField>
+      <TextField fx:id="resident3Field" layoutX="201.0" layoutY="351.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></TextField>
+      <Label layoutX="50.0" layoutY="100.0" text="Room" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
          </font>
       </Label>
-      <Label fx:id="roomLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="200.0" layoutY="101.0" prefHeight="30.0" prefWidth="150.0" textAlignment="CENTER">
+      <Label fx:id="roomLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="200.0" layoutY="101.0" prefHeight="30.0" prefWidth="150.0" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
          </font>
