--- a/src/main/resources/addroompage.fxml
+++ b/src/main/resources/addroompage.fxml
@@ -1,26 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="condo.controller.staff.AddRoomController">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="background1" stylesheets="@pictures/CSS/bg.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="condo.controller.staff.AddRoomController">
     <children>
-        <Label layoutX="251.0" layoutY="100.0" prefHeight="400.0" prefWidth="300.0" style="-fx-border-color: black;" />
+        <Label layoutX="251.0" layoutY="100.0" opacity="0.85" prefHeight="400.0" prefWidth="300.0" style="-fx-background-color: white;" />
         <Label alignment="CENTER" contentDisplay="CENTER" layoutX="297.0" layoutY="119.0" prefHeight="50.0" prefWidth="206.0" text="Add Room">
             <font>
                 <Font name="Arial Rounded MT Bold" size="30.0" />
             </font>
         </Label>
-      <ChoiceBox fx:id="buildingBox" layoutX="420.0" layoutY="200.0" prefHeight="25.0" prefWidth="100.0" />
-      <ChoiceBox fx:id="floorBox" layoutX="420.0" layoutY="260.0" prefHeight="25.0" prefWidth="100.0" />
-      <ChoiceBox fx:id="typeBox" layoutX="420.0" layoutY="320.0" prefHeight="25.0" prefWidth="100.0" />
-      <Button fx:id="addBtn" defaultButton="true" layoutX="375.0" layoutY="447.0" mnemonicParsing="false" onAction="#handleAddRoomBtnOnAction" prefHeight="30.0" prefWidth="50.0" text="Add">
+      <ChoiceBox fx:id="buildingBox" layoutX="420.0" layoutY="200.0" prefHeight="25.0" prefWidth="100.0">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></ChoiceBox>
+      <ChoiceBox fx:id="floorBox" layoutX="420.0" layoutY="260.0" prefHeight="25.0" prefWidth="100.0">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></ChoiceBox>
+      <ChoiceBox fx:id="typeBox" layoutX="420.0" layoutY="320.0" prefHeight="25.0" prefWidth="100.0">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></ChoiceBox>
+      <Button fx:id="addBtn" defaultButton="true" layoutX="375.0" layoutY="447.0" mnemonicParsing="false" onAction="#handleAddRoomBtnOnAction" prefHeight="30.0" prefWidth="50.0" stylesheets="@pictures/CSS/style.css" text="Add">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
-         </font></Button>
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <styleClass>
+            <String fx:value="btn" />
+            <String fx:value="btn0" />
+         </styleClass></Button>
       <Label layoutX="280.0" layoutY="200.0" prefHeight="30.0" prefWidth="90.0" text="Building">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
@@ -36,16 +54,26 @@
             <Font name="Arial Rounded MT Bold" size="15.0" />
          </font>
       </Label>
-      <ChoiceBox fx:id="roomBox" layoutX="420.0" layoutY="380.0" prefHeight="25.0" prefWidth="100.0" />
+      <ChoiceBox fx:id="roomBox" layoutX="420.0" layoutY="380.0" prefHeight="25.0" prefWidth="100.0">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></ChoiceBox>
       <Label layoutX="280.0" layoutY="380.0" prefHeight="30.0" prefWidth="90.0" text="Room">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
          </font>
       </Label>
-      <Button fx:id="backBtn" layoutX="377.0" layoutY="527.0" mnemonicParsing="false" onAction="#handleBackBtnOnAction" text="Back">
+      <Button fx:id="backBtn" layoutX="377.0" layoutY="527.0" mnemonicParsing="false" onAction="#handleBackBtnOnAction" stylesheets="@pictures/CSS/style.css" text="Back">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <styleClass>
+            <String fx:value="btn" />
+            <String fx:value="btn0" />
+         </styleClass>
       </Button>
     </children>
 </AnchorPane>
