--- a/src/main/resources/addstaffpage.fxml
+++ b/src/main/resources/addstaffpage.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -7,9 +9,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="condo.controller.admin.AddStaffController">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="background1" stylesheets="@pictures/CSS/bg.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="condo.controller.admin.AddStaffController">
    <children>
-      <Label layoutX="100.0" layoutY="87.0" prefHeight="400.0" prefWidth="600.0" style="-fx-border-color: black;" />
+      <Label layoutX="100.0" layoutY="87.0" opacity="0.85" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: white;" />
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="250.0" layoutY="81.0" prefHeight="100.0" prefWidth="300.0" text="Add Staff" textAlignment="CENTER">
          <font>
             <Font name="Arial Rounded MT Bold" size="40.0" />
@@ -40,18 +42,47 @@
             <Font name="Arial Rounded MT Bold" size="15.0" />
          </font>
       </Label>
-      <TextField fx:id="nameField" layoutX="226.0" layoutY="220.0" />
-      <TextField fx:id="surnameField" layoutX="226.0" layoutY="288.0" />
-      <TextField fx:id="usernameField" layoutX="521.0" layoutY="220.0" />
-      <PasswordField fx:id="passwordField" layoutX="521.0" layoutY="288.0" />
-      <PasswordField fx:id="confirmField" layoutX="521.0" layoutY="365.0" />
-      <Button fx:id="createBtn" defaultButton="true" layoutX="360.0" layoutY="431.0" mnemonicParsing="false" onAction="#handleCreateBtnOnAction" prefHeight="30.0" prefWidth="80.0" text="Create">
+      <TextField fx:id="nameField" layoutX="226.0" layoutY="220.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></TextField>
+      <TextField fx:id="surnameField" layoutX="226.0" layoutY="288.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></TextField>
+      <TextField fx:id="usernameField" layoutX="521.0" layoutY="220.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></TextField>
+      <PasswordField fx:id="passwordField" layoutX="521.0" layoutY="288.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></PasswordField>
+      <PasswordField fx:id="confirmField" layoutX="521.0" layoutY="365.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></PasswordField>
+      <Button fx:id="createBtn" defaultButton="true" layoutX="360.0" layoutY="431.0" mnemonicParsing="false" onAction="#handleCreateBtnOnAction" prefHeight="30.0" prefWidth="80.0" stylesheets="@pictures/CSS/style.css" text="Create">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
-         </font></Button>
-      <Button fx:id="backBtn" layoutX="380.0" layoutY="511.0" mnemonicParsing="false" onAction="#handleBackBtnOnAction" text="Back">
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <styleClass>
+            <String fx:value="btn" />
+            <String fx:value="btn0" />
+         </styleClass></Button>
+      <Button fx:id="backBtn" layoutX="380.0" layoutY="511.0" mnemonicParsing="false" onAction="#handleBackBtnOnAction" stylesheets="@pictures/CSS/style.css" text="Back">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
-         </font></Button>
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <styleClass>
+            <String fx:value="btn" />
+            <String fx:value="btn0" />
+         </styleClass></Button>
    </children>
 </AnchorPane>
