--- a/src/main/resources/adminmenupage.fxml
+++ b/src/main/resources/adminmenupage.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -7,23 +9,26 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="condo.controller.admin.AdminMenuController">
+<AnchorPane maxWidth="800.0" prefHeight="600.0" prefWidth="800.0" styleClass="background1" stylesheets="@pictures/CSS/bg.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="condo.controller.admin.AdminMenuController">
    <children>
-      <Label layoutY="144.0" prefHeight="100.0" prefWidth="801.0" style="-fx-border-color: black;" />
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="49.0" layoutY="46.0" prefHeight="50.0" prefWidth="140.0" text="Welcome" textAlignment="CENTER">
+      <Label layoutY="144.0" opacity="0.75" prefHeight="100.0" prefWidth="801.0" style="-fx-background-color: black;" />
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="49.0" layoutY="46.0" prefHeight="50.0" prefWidth="140.0" text="Welcome" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="30.0" />
          </font>
       </Label>
-      <Button fx:id="signOutBtn" layoutX="680.0" layoutY="59.0" mnemonicParsing="false" onAction="#handleSignOutBtnOnAction" style="-fx-background-color: none;" text="Sign out">
+      <Button fx:id="signOutBtn" layoutX="680.0" layoutY="59.0" mnemonicParsing="false" onAction="#handleSignOutBtnOnAction" style="-fx-background-color: none;" text="Sign out" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
-         </font></Button>
-      <Label fx:id="nameLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="460.0" layoutY="47.0" prefHeight="50.0" prefWidth="140.0" textAlignment="CENTER">
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Label fx:id="nameLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="460.0" layoutY="47.0" prefHeight="50.0" prefWidth="140.0" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="20.0" />
          </font></Label>
-      <Label fx:id="idLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="222.0" layoutY="47.0" prefHeight="50.0" prefWidth="140.0" textAlignment="CENTER">
+      <Label fx:id="idLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="222.0" layoutY="47.0" prefHeight="50.0" prefWidth="140.0" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="20.0" />
          </font></Label>
@@ -41,20 +46,34 @@
             <Font name="Mitr Medium" size="20.0" />
          </font>
       </Button>
-      <Button fx:id="addStaffBtn" layoutX="207.0" layoutY="169.0" mnemonicParsing="false" onAction="#handleAddStaffBtnOnAction" prefHeight="50.0" prefWidth="85.0" text="Add Staff">
+      <Button fx:id="addStaffBtn" layoutX="207.0" layoutY="169.0" mnemonicParsing="false" onAction="#handleAddStaffBtnOnAction" prefHeight="50.0" prefWidth="85.0" stylesheets="@pictures/CSS/style.css" text="Add Staff">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
+         <styleClass>
+            <String fx:value="btn" />
+            <String fx:value="btn0" />
+         </styleClass>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </Button>
       <Button fx:id="profileBtn" layoutX="320.0" layoutY="170.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="85.0" style="-fx-background-color: none;">
          <font>
             <Font name="Mitr Medium" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="changePassBtn" layoutX="474.0" layoutY="169.0" mnemonicParsing="false" onAction="#handleChangePassBtnOnAction" prefHeight="50.0" prefWidth="126.0" text="Change Password">
+      <Button fx:id="changePassBtn" layoutX="474.0" layoutY="169.0" mnemonicParsing="false" onAction="#handleChangePassBtnOnAction" prefHeight="50.0" prefWidth="126.0" stylesheets="@pictures/CSS/style.css" text="Change Password">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
+         <styleClass>
+            <String fx:value="btn" />
+            <String fx:value="btn0" />
+         </styleClass>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </Button>
    </children>
 </AnchorPane>
