--- a/src/main/resources/changepasswordpage.fxml
+++ b/src/main/resources/changepasswordpage.fxml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="condo.controller.ChangePasswordController">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="background1" stylesheets="@pictures/CSS/bg.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="condo.controller.ChangePasswordController">
    <children>
-      <Label layoutX="200.0" layoutY="101.0" prefHeight="340.0" prefWidth="400.0" style="-fx-border-color: black;" />
+      <Label layoutX="200.0" layoutY="101.0" opacity="0.85" prefHeight="340.0" prefWidth="400.0" style="-fx-background-color: white;">
+         <cursor>
+            <Cursor fx:constant="DEFAULT" />
+         </cursor></Label>
       <Label alignment="CENTER" layoutX="224.0" layoutY="101.0" prefHeight="100.0" text="Change Password">
          <font>
             <Font name="Arial Rounded MT Bold" size="40.0" />
@@ -31,17 +36,40 @@
             <Font name="Mitr Medium" size="15.0" />
          </font>
       </Label>
-      <PasswordField fx:id="oldPassField" layoutX="400.0" layoutY="232.0" />
-      <PasswordField fx:id="newPassField" layoutX="401.0" layoutY="275.0" />
-      <PasswordField fx:id="confirmField" layoutX="401.0" layoutY="317.0" />
-      <Button fx:id="changeBtn" alignment="CENTER" defaultButton="true" layoutX="372.0" layoutY="375.0" mnemonicParsing="false" onAction="#handleChangeBtnOnAction" text="Change">
+      <PasswordField fx:id="oldPassField" layoutX="400.0" layoutY="232.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></PasswordField>
+      <PasswordField fx:id="newPassField" layoutX="401.0" layoutY="275.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></PasswordField>
+      <PasswordField fx:id="confirmField" layoutX="401.0" layoutY="317.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></PasswordField>
+      <Button fx:id="changeBtn" alignment="CENTER" defaultButton="true" layoutX="372.0" layoutY="375.0" mnemonicParsing="false" onAction="#handleChangeBtnOnAction" stylesheets="@pictures/CSS/style.css" text="Change">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
-         </font></Button>
-      <Button fx:id="backBtn" alignment="CENTER" layoutX="380.0" layoutY="483.0" mnemonicParsing="false" onAction="#handleBackBtnOnAction" text="Back">
+         </font>
+         <styleClass>
+            <String fx:value="btn" />
+            <String fx:value="btn0" />
+         </styleClass>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Button fx:id="backBtn" alignment="CENTER" layoutX="380.0" layoutY="483.0" mnemonicParsing="false" onAction="#handleBackBtnOnAction" stylesheets="@pictures/CSS/style.css" text="Back">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
-         </font></Button>
+         </font>
+         <styleClass>
+            <String fx:value="btn" />
+            <String fx:value="btn0" />
+         </styleClass>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
       <Label layoutX="249.0" layoutY="236.0" text="Old Password">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
