--- a/src/main/resources/loginpage.fxml
+++ b/src/main/resources/loginpage.fxml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -18,45 +22,73 @@
       <RowConstraints />
    </rowConstraints>
    <children>
-      <AnchorPane prefHeight="600.0" prefWidth="800.0">
+      <AnchorPane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: white;" styleClass="background" stylesheets="@pictures/CSS/style.css">
          <children>
-            <Label layoutX="203.0" layoutY="180.0" prefHeight="240.0" prefWidth="400.0" style="-fx-border-color: black;" />
-            <TextField fx:id="usernameField" layoutX="376.0" layoutY="270.0" />
-            <PasswordField fx:id="passwordField" layoutX="376.0" layoutY="316.0" />
-            <Button fx:id="loginBtn" defaultButton="true" layoutX="376.0" layoutY="360.0" mnemonicParsing="false" onAction="#handleLoginBtnOnAction" text="Log in">
+            <ImageView fx:id="wallpaper" fitHeight="600.0" fitWidth="400.0" layoutX="-34.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@pictures/CSS/wallpaper.jpg" />
+               </image>
+            </ImageView>
+            <Label layoutX="392.0" layoutY="180.0" prefHeight="240.0" prefWidth="400.0" />
+            <TextField fx:id="usernameField" layoutX="538.0" layoutY="272.0">
+               <cursor>
+                  <Cursor fx:constant="TEXT" />
+               </cursor></TextField>
+            <PasswordField fx:id="passwordField" layoutX="538.0" layoutY="318.0">
+               <cursor>
+                  <Cursor fx:constant="TEXT" />
+               </cursor></PasswordField>
+            <Button fx:id="loginBtn" defaultButton="true" layoutX="538.0" layoutY="362.0" mnemonicParsing="false" onAction="#handleLoginBtnOnAction" prefHeight="32.0" prefWidth="52.0" stylesheets="@pictures/CSS/style.css" text="Log in">
                <font>
                   <Font name="Arial Rounded MT Bold" size="12.0" />
-               </font></Button>
-            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="247.0" layoutY="200.0" prefHeight="50.0" text="Welcome to Elite Box">
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <styleClass>
+                  <String fx:value="btn" />
+                  <String fx:value="btn0" />
+               </styleClass></Button>
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="409.0" layoutY="202.0" prefHeight="50.0" text="Welcome to Elite Box">
                <font>
                   <Font name="Arial Rounded MT Bold" size="30.0" />
                </font>
             </Label>
-            <Label fx:id="faultLabel" layoutX="242.0" layoutY="385.0" prefHeight="32.0" prefWidth="320.0">
+            <Label fx:id="faultLabel" layoutX="409.0" layoutY="404.0" prefHeight="32.0" prefWidth="320.0">
                <font>
                   <Font name="Mitr Medium" size="15.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="209.0" layoutY="86.0" text="The Elite Condo" textAlignment="CENTER">
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="378.0" layoutY="79.0" style="-fx-background-color: white;" text="The Elite Condo" textAlignment="CENTER">
                <font>
                   <Font name="Arial Rounded MT Bold" size="50.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="295.0" layoutY="273.0" text="Username">
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="457.0" layoutY="275.0" text="Username">
                <font>
                   <Font name="Arial Rounded MT Bold" size="12.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="296.0" layoutY="318.0" text="Password">
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="458.0" layoutY="320.0" text="Password">
                <font>
                   <Font name="Arial Rounded MT Bold" size="12.0" />
                </font>
             </Label>
-            <Button fx:id="creditBtn" contentDisplay="CENTER" layoutX="603.0" layoutY="511.0" mnemonicParsing="false" onAction="#handleCreditBtnOnAction" text="Credit" textAlignment="CENTER">
+            <Button fx:id="creditBtn" contentDisplay="CENTER" layoutX="687.0" layoutY="523.0" mnemonicParsing="false" onAction="#handleCreditBtnOnAction" prefHeight="32.0" prefWidth="53.0" stylesheets="@pictures/CSS/style.css" text="Credit" textAlignment="CENTER">
                <font>
                   <Font name="Arial Rounded MT Bold" size="12.0" />
-               </font></Button>
-            <Button fx:id="registerBtn" layoutX="203.0" layoutY="431.0" mnemonicParsing="false" onAction="#handleRegisterBtnOnAction" style="-fx-background-color: none;" text="Don't have an Resident account?" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <styleClass>
+                  <String fx:value="btn" />
+                  <String fx:value="btn0" />
+               </styleClass></Button>
+            <Button fx:id="registerBtn" layoutX="470.0" layoutY="458.0" mnemonicParsing="false" onAction="#handleRegisterBtnOnAction" style="-fx-background-color: none;" text="Don't have a Resident account?">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
          </children>
       </AnchorPane>
    </children>
