--- a/src/main/resources/mailhistorywindow.fxml
+++ b/src/main/resources/mailhistorywindow.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -8,17 +10,24 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="condo.controller.staff.MailHistoryController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="background1" stylesheets="@pictures/CSS/bg.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="condo.controller.staff.MailHistoryController">
    <children>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="204.0" layoutY="14.0" prefHeight="50.0" prefWidth="192.0" text="Mail History">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="204.0" layoutY="14.0" prefHeight="50.0" prefWidth="192.0" text="Mail History" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="30.0" />
          </font>
       </Label>
-      <Button fx:id="backBtn" layoutX="529.0" layoutY="350.0" mnemonicParsing="false" onAction="#handleBackBtnOnAction" prefHeight="30.0" prefWidth="50.0" text="Back">
+      <Button fx:id="backBtn" layoutX="529.0" layoutY="350.0" mnemonicParsing="false" onAction="#handleBackBtnOnAction" prefHeight="30.0" prefWidth="50.0" stylesheets="@pictures/CSS/style.css" text="Back">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <styleClass>
+            <String fx:value="btn" />
+            <String fx:value="btn0" />
+         </styleClass>
       </Button>
       <TableView fx:id="mailTable" layoutX="20.0" layoutY="75.0" prefHeight="260.0" prefWidth="560.0">
         <columns>
@@ -29,8 +38,11 @@
             <TableColumn fx:id="timeCol" maxWidth="105.0" minWidth="105.0" prefWidth="105.0" text="Picked up time" />
             <TableColumn fx:id="staffCol" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Staff" />
         </columns>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </TableView>
-      <Label layoutX="22.0" layoutY="335.0" prefHeight="30.0" prefWidth="350.0" text="Double click on the mail to see more detail">
+      <Label layoutX="22.0" layoutY="335.0" prefHeight="30.0" prefWidth="350.0" text="Double click on the letter to see more detail" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
          </font>
