--- a/src/main/resources/registerwindow.fxml
+++ b/src/main/resources/registerwindow.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -7,9 +9,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="condo.controller.resident.RegisterController">
+<AnchorPane prefHeight="500.0" prefWidth="500.0" styleClass="background1" stylesheets="@pictures/CSS/bg.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="condo.controller.resident.RegisterController">
    <children>
-      <Label layoutX="26.0" layoutY="72.0" prefHeight="360.0" prefWidth="450.0" style="-fx-border-color: black;" />
+      <Label layoutX="26.0" layoutY="72.0" opacity="0.85" prefHeight="360.0" prefWidth="450.0" style="-fx-background-color: white;" />
       <Label alignment="CENTER" layoutX="56.0" layoutY="72.0" prefHeight="100.0" text="Resident Account Register">
          <font>
             <Font name="Arial Rounded MT Bold" size="30.0" />
@@ -31,19 +33,48 @@
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
          </font></Label>
-      <TextField fx:id="nameField" layoutX="250.0" layoutY="176.0" />
-      <TextField fx:id="roomField" layoutX="250.0" layoutY="216.0" />
-      <TextField fx:id="userField" layoutX="250.0" layoutY="256.0" />
-      <PasswordField fx:id="passwordField" layoutX="250.0" layoutY="296.0" />
-      <PasswordField fx:id="confirmField" layoutX="250.0" layoutY="340.0" />
-      <Button fx:id="signUpBtn" alignment="CENTER" defaultButton="true" layoutX="219.0" layoutY="389.0" mnemonicParsing="false" onAction="#handleSignUpBtnOnAction" text="Sign Up">
-         <font>
-            <Font name="Arial Rounded MT Bold" size="12.0" />
-         </font></Button>
-      <Button fx:id="backBtn" alignment="CENTER" layoutX="227.0" layoutY="452.0" mnemonicParsing="false" onAction="#handleBackBtnOnAction" text="Back">
+      <TextField fx:id="nameField" layoutX="250.0" layoutY="176.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></TextField>
+      <TextField fx:id="roomField" layoutX="250.0" layoutY="216.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></TextField>
+      <TextField fx:id="userField" layoutX="250.0" layoutY="256.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></TextField>
+      <PasswordField fx:id="passwordField" layoutX="250.0" layoutY="296.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></PasswordField>
+      <PasswordField fx:id="confirmField" layoutX="250.0" layoutY="340.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></PasswordField>
+      <Button fx:id="signUpBtn" alignment="CENTER" defaultButton="true" layoutX="219.0" layoutY="389.0" mnemonicParsing="false" onAction="#handleSignUpBtnOnAction" stylesheets="@pictures/CSS/style.css" text="Sign Up">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <styleClass>
+            <String fx:value="btn" />
+            <String fx:value="btn0" />
+         </styleClass></Button>
+      <Button fx:id="backBtn" alignment="CENTER" layoutX="227.0" layoutY="452.0" mnemonicParsing="false" onAction="#handleBackBtnOnAction" stylesheets="@pictures/CSS/style.css" text="Back">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="12.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <styleClass>
+            <String fx:value="btn" />
+            <String fx:value="btn0" />
+         </styleClass>
       </Button>
       <Label layoutX="110.0" layoutY="342.0" text="Confirm password">
          <font>
