--- a/src/main/resources/residentmenupage.fxml
+++ b/src/main/resources/residentmenupage.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -7,23 +9,26 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="condo.controller.resident.ResidentMenuController">
+<AnchorPane maxWidth="800.0" prefHeight="600.0" prefWidth="800.0" styleClass="background1" stylesheets="@pictures/CSS/bg.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="condo.controller.resident.ResidentMenuController">
    <children>
-      <Label layoutY="144.0" prefHeight="100.0" prefWidth="801.0" style="-fx-border-color: black;" />
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="49.0" layoutY="46.0" prefHeight="50.0" prefWidth="140.0" text="Welcome" textAlignment="CENTER">
+      <Label layoutY="144.0" opacity="0.75" prefHeight="100.0" prefWidth="801.0" style="-fx-background-color: black;" />
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="49.0" layoutY="46.0" prefHeight="50.0" prefWidth="140.0" text="Welcome" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="30.0" />
          </font>
       </Label>
-      <Button fx:id="signOutBtn" layoutX="680.0" layoutY="59.0" mnemonicParsing="false" onAction="#handleSignOutBtnOnAction" style="-fx-background-color: none;" text="Sign out">
+      <Button fx:id="signOutBtn" layoutX="680.0" layoutY="59.0" mnemonicParsing="false" onAction="#handleSignOutBtnOnAction" style="-fx-background-color: none;" text="Sign out" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
-         </font></Button>
-      <Label fx:id="roomLabel" alignment="CENTER" layoutX="460.0" layoutY="47.0" prefHeight="50.0" prefWidth="140.0" textAlignment="CENTER">
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Label fx:id="roomLabel" alignment="CENTER" layoutX="460.0" layoutY="47.0" prefHeight="50.0" prefWidth="140.0" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="20.0" />
          </font></Label>
-      <Label fx:id="userLabel" alignment="CENTER" layoutX="222.0" layoutY="47.0" prefHeight="50.0" prefWidth="140.0" textAlignment="CENTER">
+      <Label fx:id="userLabel" alignment="CENTER" layoutX="222.0" layoutY="47.0" prefHeight="50.0" prefWidth="140.0" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="20.0" />
          </font></Label>
@@ -37,16 +42,33 @@
             <TableColumn fx:id="staffCol" maxWidth="130.0" minWidth="130.0" prefWidth="130.0" text="Staff" />
             <TableColumn fx:id="statusCol" maxWidth="80.0" minWidth="80.0" text="Status" />
         </columns>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </TableView>
-      <Button fx:id="historyBtn" layoutX="250.0" layoutY="169.0" mnemonicParsing="false" onAction="#handleHistoryBtnOnAction" prefHeight="50.0" prefWidth="85.0" text="Mail History">
+      <Button fx:id="historyBtn" layoutX="250.0" layoutY="169.0" mnemonicParsing="false" onAction="#handleHistoryBtnOnAction" prefHeight="50.0" prefWidth="85.0" stylesheets="@pictures/CSS/style.css" text="Mail History">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <styleClass>
+            <String fx:value="btn" />
+            <String fx:value="btn0" />
+         </styleClass>
       </Button>
-      <Button fx:id="changePassBtn" layoutX="465.0" layoutY="170.0" mnemonicParsing="false" onAction="#handleChangePassBtnOnAction" prefHeight="50.0" prefWidth="130.0" text="Change Password">
+      <Button fx:id="changePassBtn" layoutX="465.0" layoutY="170.0" mnemonicParsing="false" onAction="#handleChangePassBtnOnAction" prefHeight="50.0" prefWidth="130.0" stylesheets="@pictures/CSS/style.css" text="Change Password">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <styleClass>
+            <String fx:value="btn" />
+            <String fx:value="btn0" />
+         </styleClass>
       </Button>
    </children>
 </AnchorPane>
