--- a/src/main/resources/roomlistpage.fxml
+++ b/src/main/resources/roomlistpage.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -8,17 +10,24 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="600.0" maxWidth="800.0" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="condo.controller.staff.RoomListController">
+<AnchorPane maxHeight="600.0" maxWidth="800.0" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" styleClass="background1" stylesheets="@pictures/CSS/bg.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="condo.controller.staff.RoomListController">
    <children>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="304.0" layoutY="62.0" prefHeight="50.0" prefWidth="192.0" text="Room List">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="271.0" layoutY="79.0" prefHeight="50.0" prefWidth="259.0" text="Room List" textFill="WHITE">
          <font>
-            <Font name="Arial Rounded MT Bold" size="30.0" />
+            <Font name="Arial Rounded MT Bold" size="40.0" />
          </font>
       </Label>
-      <Button fx:id="backBtn" layoutX="375.0" layoutY="505.0" mnemonicParsing="false" onAction="#handleBackBtnOnAction" prefHeight="30.0" prefWidth="50.0" text="Back">
+      <Button fx:id="backBtn" layoutX="375.0" layoutY="505.0" mnemonicParsing="false" onAction="#handleBackBtnOnAction" prefHeight="30.0" prefWidth="50.0" stylesheets="@pictures/CSS/style.css" text="Back">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
+         <styleClass>
+            <String fx:value="btn" />
+            <String fx:value="btn0" />
+         </styleClass>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </Button>
       <TableView fx:id="residentTable" layoutX="50.0" layoutY="170.0" prefHeight="260.0" prefWidth="700.0">
         <columns>
@@ -31,12 +40,22 @@
             <TableColumn fx:id="res2Col" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Resident 2" />
             <TableColumn fx:id="res3Col" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Resident 3" />
         </columns>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </TableView>
-      <Button fx:id="refreshBtn" layoutX="650.0" layoutY="447.0" mnemonicParsing="false" onAction="#handleRefreshBtnOnAction" prefHeight="30.0" prefWidth="100.0" text="Refresh">
+      <Button fx:id="refreshBtn" layoutX="650.0" layoutY="447.0" mnemonicParsing="false" onAction="#handleRefreshBtnOnAction" prefHeight="30.0" prefWidth="100.0" stylesheets="@pictures/CSS/style.css" text="Refresh">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
-         </font></Button>
-      <Label layoutX="50.0" layoutY="447.0" prefHeight="30.0" prefWidth="350.0" text="Double click on the room to &quot;Add resident&quot;">
+         </font>
+         <styleClass>
+            <String fx:value="btn" />
+            <String fx:value="btn0" />
+         </styleClass>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Label layoutX="50.0" layoutY="447.0" prefHeight="30.0" prefWidth="350.0" text="Double click on the room to &quot;Add resident&quot;" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
          </font>
