--- a/src/main/resources/staffmenupage.fxml
+++ b/src/main/resources/staffmenupage.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -8,23 +10,26 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="condo.controller.staff.StaffMenuController">
+<AnchorPane maxWidth="800.0" prefHeight="600.0" prefWidth="800.0" styleClass="background1" stylesheets="@pictures/CSS/bg.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="condo.controller.staff.StaffMenuController">
    <children>
-      <Label layoutY="144.0" prefHeight="100.0" prefWidth="801.0" style="-fx-border-color: black;" />
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="49.0" layoutY="46.0" prefHeight="50.0" prefWidth="140.0" text="Welcome" textAlignment="CENTER">
+      <Label layoutY="144.0" opacity="0.75" prefHeight="100.0" prefWidth="801.0" style="-fx-background-color: black;" />
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="49.0" layoutY="46.0" prefHeight="50.0" prefWidth="140.0" text="Welcome" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="30.0" />
          </font>
       </Label>
-      <Button fx:id="signOutBtn" layoutX="680.0" layoutY="59.0" mnemonicParsing="false" onAction="#handleSignOutBtnOnAction" style="-fx-background-color: none;" text="Sign out">
+      <Button fx:id="signOutBtn" layoutX="680.0" layoutY="59.0" mnemonicParsing="false" onAction="#handleSignOutBtnOnAction" style="-fx-background-color: none;" text="Sign out" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
-         </font></Button>
-      <Label fx:id="nameLabel" alignment="CENTER" layoutX="460.0" layoutY="47.0" prefHeight="50.0" prefWidth="140.0" textAlignment="CENTER">
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Label fx:id="nameLabel" alignment="CENTER" layoutX="460.0" layoutY="47.0" prefHeight="50.0" prefWidth="140.0" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="20.0" />
          </font></Label>
-      <Label fx:id="idLabel" alignment="CENTER" layoutX="222.0" layoutY="47.0" prefHeight="50.0" prefWidth="140.0" textAlignment="CENTER">
+      <Label fx:id="idLabel" alignment="CENTER" layoutX="222.0" layoutY="47.0" prefHeight="50.0" prefWidth="140.0" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="20.0" />
          </font></Label>
@@ -38,47 +43,106 @@
             <TableColumn fx:id="staffCol" maxWidth="130.0" minWidth="130.0" prefWidth="130.0" text="Staff" />
             <TableColumn fx:id="statusCol" maxWidth="80.0" minWidth="80.0" text="Status" />
         </columns>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </TableView>
       <Button layoutX="10.0" layoutY="170.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="70.0" style="-fx-background-color: none;">
          <font>
             <Font name="Mitr Medium" size="20.0" />
          </font>
       </Button>
-      <Button fx:id="addMailBtn" layoutX="70.0" layoutY="170.0" mnemonicParsing="false" onAction="#handleAddMailBtnOnAction" prefHeight="50.0" prefWidth="100.0" text="Add Mail">
+      <Button fx:id="addMailBtn" layoutX="70.0" layoutY="170.0" mnemonicParsing="false" onAction="#handleAddMailBtnOnAction" prefHeight="50.0" prefWidth="100.0" stylesheets="@pictures/CSS/style.css" text="Add Mail">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <styleClass>
+            <String fx:value="btn" />
+            <String fx:value="btn0" />
+         </styleClass>
       </Button>
-      <Button fx:id="listBtn" layoutX="445.0" layoutY="170.0" mnemonicParsing="false" onAction="#handleListBtnOnAction" prefHeight="50.0" prefWidth="100.0" text="Room List">
+      <Button fx:id="listBtn" layoutX="445.0" layoutY="170.0" mnemonicParsing="false" onAction="#handleListBtnOnAction" prefHeight="50.0" prefWidth="100.0" stylesheets="@pictures/CSS/style.css" text="Room List">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <styleClass>
+            <String fx:value="btn" />
+            <String fx:value="btn0" />
+         </styleClass>
       </Button>
-      <Button fx:id="changePassBtn" layoutX="588.0" layoutY="169.0" mnemonicParsing="false" onAction="#handleChangePassBtnOnAction" prefHeight="50.0" prefWidth="140.0" text="Change Password">
+      <Button fx:id="changePassBtn" layoutX="588.0" layoutY="169.0" mnemonicParsing="false" onAction="#handleChangePassBtnOnAction" prefHeight="50.0" prefWidth="140.0" stylesheets="@pictures/CSS/style.css" text="Change Password">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <styleClass>
+            <String fx:value="btn" />
+            <String fx:value="btn0" />
+         </styleClass>
       </Button>
-      <Button fx:id="addRoomBtn" layoutX="320.0" layoutY="170.0" mnemonicParsing="false" onAction="#handleAddRoomBtnOnAction" prefHeight="50.0" prefWidth="100.0" text="Add Room">
+      <Button fx:id="addRoomBtn" layoutX="320.0" layoutY="170.0" mnemonicParsing="false" onAction="#handleAddRoomBtnOnAction" prefHeight="50.0" prefWidth="100.0" stylesheets="@pictures/CSS/style.css" text="Add Room">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <styleClass>
+            <String fx:value="btn" />
+            <String fx:value="btn0" />
+         </styleClass>
       </Button>
-      <Button fx:id="historyBtn" alignment="CENTER" layoutX="195.0" layoutY="170.0" mnemonicParsing="false" onAction="#handleHistoryBtnOnAction" prefHeight="50.0" prefWidth="100.0" text="Mail History">
+      <Button fx:id="historyBtn" alignment="CENTER" layoutX="195.0" layoutY="170.0" mnemonicParsing="false" onAction="#handleHistoryBtnOnAction" prefHeight="50.0" prefWidth="100.0" stylesheets="@pictures/CSS/style.css" text="Mail History">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <styleClass>
+            <String fx:value="btn" />
+            <String fx:value="btn0" />
+         </styleClass>
       </Button>
-      <Label layoutX="74.0" layoutY="565.0" prefHeight="30.0" prefWidth="265.0" text="Double click for more information">
+      <Label layoutX="74.0" layoutY="565.0" prefHeight="30.0" prefWidth="265.0" text="Double click for more information" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="15.0" />
          </font>
       </Label>
-      <Button fx:id="refreshBtn" layoutX="658.0" layoutY="244.0" mnemonicParsing="false" onAction="#handleRefreshBtnOnAction" prefHeight="25.0" prefWidth="70.0" text="Refresh">
+      <Button fx:id="refreshBtn" layoutX="658.0" layoutY="244.0" mnemonicParsing="false" onAction="#handleRefreshBtnOnAction" prefHeight="25.0" prefWidth="70.0" stylesheets="@pictures/CSS/style.css" text="Refresh">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <styleClass>
+            <String fx:value="btn" />
+            <String fx:value="btn0" />
+         </styleClass>
       </Button>
-      <TextField fx:id="searchField" layoutX="74.0" layoutY="257.0" />
+      <TextField fx:id="searchField" layoutX="74.0" layoutY="244.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor></TextField>
+      <Button fx:id="searchBtn" layoutX="223.0" layoutY="244.0" mnemonicParsing="false" onAction="#handleSearchBtnOnAction" stylesheets="@pictures/CSS/style.css" text="Search">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <font>
+            <Font name="Arial Rounded MT Bold" size="12.0" />
+         </font>
+         <styleClass>
+            <String fx:value="btn" />
+            <String fx:value="btn0" />
+         </styleClass></Button>
    </children>
 </AnchorPane>
